--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,16 +7,12 @@
 
 
 <div class="row">
-  <div class="col-xs-12 ">
-    <div class="media" *ngFor="let recipe of recipes" >
-      <img [src]="recipe.imagePath" class="mr-3" alt="..." style="max-height: 50px">
-      <div class="media-body">
-        <h5> <a href="#"> {{ recipe.name }}</a> </h5>
-        {{ recipe.description }}
-      </div>
-    </div>
-  </div>
-<!--  <app-recipe-item></app-recipe-item>-->
+  <app-recipe-item
+    *ngFor="let recipe of recipes"
+    [recipe]="recipe"
+  >
+
+  </app-recipe-item>
 </div>
 
 
