--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,11 +1,12 @@
 <div class="row">
   <div class="col-md-10">
-    <app-shopping-edit></app-shopping-edit>
+    <app-shopping-edit (ingredientsAdded)="onAddIngredient($event)"></app-shopping-edit>
     <hr />
     <ul class="list-group" >
       <a class="list-group-item"
          style="cursor:
-         pointer;" *ngFor="let ingred of ingredients"> {{ ingred.name }} - ({{ ingred.amount }})
+         pointer;"
+         *ngFor="let ingredient of ingredients"> {{ ingredient.name }} - ({{ ingredient.amount }})
       </a>
     </ul>
   </div>
