--- a/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/src/app/recipes/recipe-details/recipe-details.component.html
@@ -21,5 +21,10 @@
 <div class="row">
   <div class="col-xs-12">
     <p> Ingredients </p>
+    <ul *ngFor="let recipe of recipes">
+      <li *ngFor="let ingredient of recipe.ingredients">
+        {{ ingredient.name }}
+      </li>
+    </ul>
   </div>
 </div>
