--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="col-md-10">
-    <app-shopping-edit (ingredientsAdded)="onAddIngredient($event)"></app-shopping-edit>
+<!--    <app-shopping-edit (ingredientsAdded)="onAddIngredient($event)"></app-shopping-edit>-->
+    <app-shopping-edit></app-shopping-edit>
     <hr />
     <ul class="list-group" >
       <a class="list-group-item"
