--- a/src/app/Header/header.component.html
+++ b/src/app/Header/header.component.html
@@ -6,10 +6,10 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown" [class.collapse]="collapsed" (window:resize)="collapsed = true">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" (click)="onSelect('recipe')">Recipes</a>
+        <a class="nav-link" [routerLink]="['recipes']" [routerLinkActive]="['active']">Recipes</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" (click)="onSelect('shopping-list')">Shopping</a>
+        <a class="nav-link" [routerLink]="['shopping-list']" [routerLinkActive]="['active']">Shopping</a>
       </li>
       <li class="nav-item dropdown" appDropdown>
         <a  class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
