--- a/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/src/app/recipes/recipe-details/recipe-details.component.html
@@ -1,20 +1,20 @@
 <div class="row">
   <div class="col-xs-12">
-    <h1> Recipe Name </h1>
+    <h1> {{ recipeItem.name }} </h1>
   </div>
 </div>
 
 <div class="row">
   <div class="col-xs-12">
     <button class="btn btn-primary"> To Shopping List </button>
-    <button class="btn btn-info"> Edit </button>
+    <button class="btn btn-info" (click)="onEditRecipe()"> Edit </button>
     <button class="btn btn-danger"> Delete</button>
   </div>
 </div>
 
 <div class="row">
   <div class="col-xs-12">
-    <p> Description </p>
+    <p> {{ recipeItem.description }} </p>
   </div>
 </div>
 
