--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <button class="btn btn-primary"> New Recipe </button>
+    <button class="btn btn-primary" (click)="newRecipe()"> New Recipe </button>
   </div>
 </div>
 <hr />
@@ -8,8 +8,9 @@
 
 <div class="row">
   <app-recipe-item
-    *ngFor="let recipe of recipes"
+    *ngFor="let recipe of recipes; let i = index"
     [recipe]="recipe"
+    [index]="i"
   >
 
   </app-recipe-item>
