--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,10 +1,11 @@
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list></app-recipe-list>
+      <app-recipe-list></app-recipe-list>
     <hr />
   </div>
 
   <div class="col-md-7">
-    <app-recipe-details></app-recipe-details>
+    <!-- <app-recipe-details></app-recipe-details> -->
+      <router-outlet></router-outlet>
   </div>
 </div>
